<resources>
    <string name="app_name">C196_Scheduler</string>
    <string name="remove_course">Remove Course</string>
    <string name="add_course">Add Course</string>
    <string name="save_term">Save Term</string>
    <string name="cancel">Cancel</string>
    <string name="delete_course">Delete Course</string>
    <string name="save_course">Save Course</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="delete_term">Delete Term</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="enter_title">Enter title</string>
    <string name="term_title">Term Title:</string>
    <string name="associated_courses">Associated Courses:</string>
    <string name="associated_assessments">Associated Assessments:</string>
    <string name="course_instructor">Course Instructor:</string>
    <string name="course_status">Course Status:</string>
    <string name="enter_term_title">Enter term title</string>
    <string name="enter_course_title">Enter course title</string>
    <string name="course_title">Course Title:</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="enter_assessment_title">Enter assessment title</string>
    <string name="assessment_title">Assessment Title:</string>
    <string name="set_start_alert">Set Start Alert</string>
    <string name="set_end_alert">Set End Alert</string>
    <string name="course_notes">Course Notes</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannel description</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="modify_instructor">Modify Instructor</string>

</resources>