<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assessment_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editAssessmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_assessment_title"
            android:inputType="textPersonName"
            android:textSize="24sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_course_title"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assessment_type"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="24sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/assessmentStartBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/assessmentEndBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/startAlertCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/set_start_alert" />

            <CheckBox
                android:id="@+id/endAlertCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:text="@string/set_end_alert" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>