<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTermTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_title"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTermStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_start_date"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--<EditText
            android:id="@+id/editTermEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_end_date"
            android:ems="10"
            android:inputType="textPersonName" />-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/associated_courses"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courseRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="409dp"
            android:layout_gravity="center"
            android:padding="20dp">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>